overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: frontend-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dev.revotion.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shadcn-dashboard-service
                port:
                  number: 80
